# ksm-v2

./: .gitignore  .gitmodules  README.md  kshootmania-v1-remake.sln
ksh/: .gitattributes  CMakeLists.txt  README.md  ksh.vcxproj  ksh.vcxproj.filters
ksh/include/ksh/: chart.hpp  chart_data.hpp  editable_chart.hpp  note_builder.hpp  playable_chart.hpp
ksh/include/ksh/audio/: audio.hpp  audio_effect.hpp  bgm_info.hpp  key_sound.hpp  legacy_audio_info.hpp
ksh/include/ksh/beat/: beat_map.hpp  time_sig.hpp
ksh/include/ksh/beat_map/: beat_map.hpp  time_sig.hpp
ksh/include/ksh/bg/: bg.hpp
ksh/include/ksh/camera/: cam.hpp  camera.hpp  tilt.hpp
ksh/include/ksh/chart_object/: abstract_musical_segment.hpp  abstract_note.hpp  bt_note.hpp  fx_note.hpp  lane_spin.hpp  laser_note.hpp  line_graph.hpp  note_judgment.hpp
ksh/include/ksh/common/: common.hpp
ksh/include/ksh/encoding/: encoding.hpp
ksh/include/ksh/gauge/: gauge.hpp
ksh/include/ksh/impl/: impl.hpp
ksh/src/: chart.cpp  chart_data.cpp  note_builder.cpp  playable_chart.cpp
ksh/src/audio/: audio.cpp  audio_effect.cpp  bgm_info.cpp  key_sound.cpp  legacy_audio_info.cpp
ksh/src/beat/: beat_map.cpp  time_sig.cpp
ksh/src/beat_map/: beat_map.cpp
ksh/src/bg/: bg.cpp
ksh/src/camera/: cam.cpp  camera.cpp  tilt.cpp
ksh/src/chart_object/: lane_spin.cpp  laser_note.cpp  line_graph.cpp
ksh/src/common/: common.cpp
ksh/src/encoding/: encoding_win.cpp
ksh/src/gauge/: gauge.cpp
ksh/src/io/: ksh_io.cpp  kson_io.cpp
ksh/src/meta/: meta.cpp
ksh/src/note/: note.cpp
ksh/src/util/: timing_utils.cpp
(+535 files in other folders)
