cmake_minimum_required(VERSION 3.8)
project(ksh CXX)
file(GLOB_RECURSE sources src/*.cpp)
add_library(ksh STATIC ${sources})
if(MSVC)
    if("${CMAKE_BUILD_TYPE}" MATCHES "Debug")
        target_compile_options(ksh PRIVATE /MTd /W4)
        message("Build type: Debug")
    else()
        target_compile_options(ksh PRIVATE /MT /Ox /W4 /DNDEBUG)
        message("Build type: Release")
    endif()
else()
    target_compile_options(ksh PRIVATE -O2 -Wall -fPIC)
endif()
target_compile_features(ksh PRIVATE cxx_std_17)
target_include_directories(ksh PUBLIC ${PROJECT_SOURCE_DIR}/include)
